overflow issue solved

--- a/src/App.scss
+++ b/src/App.scss
@@ -35,6 +35,10 @@ button:hover {
   border: 1.5px rgb(2, 236, 236) solid;
 }
 
+.root-dork {
+  overflow: scroll;
+}
+
 button {
   width: 100px;
   padding: 10px;
